fixed menu shape apparition on mobile

--- a/src/Parts/Projects/projects.css
+++ b/src/Parts/Projects/projects.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   font-size: 1.2em;
   margin-top: 45pt;
+  justify-content: center;
 }
 
 .project__text p {
